small z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -1130,6 +1130,7 @@ input[type=number]::-webkit-inner-spin-button {
 	top: 15px;
 	right: 30px;
 	transition: 300ms;
+	z-index: 123;
 }
 
 #github:hover,
